# Network-Programming-Final-Assignment

./: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
backend/: CMakeLists.txt
backend/src/: main.cpp
backend/src/app/: CollabServer.cpp  CollabServer.h  Payload.h
backend/src/env/: dotenv.c  dotenv.h
backend/src/event/: EventEmitter.h
backend/src/middleware/: Middleware.h
backend/src/middleware/protocol/: Protocol.cpp
backend/src/middleware/websocket/: WebSocket.cpp  WebSocket.h
backend/src/room/: RoomServer.cpp  RoomServer.h
backend/src/room/client/: Client.cpp  Client.h  IdGenerator.h
backend/src/server/: Packet.cpp  Packet.h  Server.cpp  Server.h
backend/src/socket/: Socket.h  SocketException.h  SocketType.h  Socket_posix.cpp  Socket_win.cpp
backend/src/socket/IOMultiplexer/: IOMultiplexer.h  IOMultiplexer_linux.cpp  IOMultiplexingException.h
backend/src/utils/: base64.cpp  base64.h  endian.h  sha1.cpp
frontend/: .env.development  .env.production
frontend/excalidraw-app/: package.json  vite-env.d.ts
frontend/excalidraw-app/collab/: Collab.tsx  NativeSocket.ts  Portal.tsx  Socket.ts
frontend/excalidraw-app/data/: firebase.ts
frontend/excalidraw-app/share/: ShareDialog.tsx
frontend/excalidraw-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/excalidraw-app/src-tauri/cpp/: CMakeLists.txt
frontend/excalidraw-app/src-tauri/cpp/src/: CollabClient.cpp  CollabClient.h  CollabClientCAPI.cpp  CollabClientCAPI.h  main.cpp
frontend/excalidraw-app/src-tauri/cpp/src/log/: Log.cpp  Log.h
frontend/excalidraw-app/src-tauri/cpp/src/protocol/: Protocol.cpp  Protocol.h
frontend/excalidraw-app/src-tauri/cpp/src/utils/: Endian.h  base64.cpp  base64.h  sha1.h
frontend/excalidraw-app/src-tauri/src/: collab_client.rs  ffi.rs  main.rs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/pages/MainPage/: MainPage.styled.ts  MainPage.tsx
src/styles/global/: base.ts  fonts.ts
